--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@ body {
   display: inline-block;
   width: 20px;
   margin-bottom: 2px;
-  margin-right: 5px;
+  margin-right: 1100px;
   border-radius: 2px;
 }
 
@@ -54,4 +54,34 @@ ul.nav.navbar-nav li {
   background-size: cover;
   color: #fff;
   text-shadow: 0 0 8px #66757f;
+}
+
+#messages .list-group-item {
+  display: flex;
+  align-items: flex-start;
+  padding: 7px 20px 12px;
+}
+
+#messages:not(.no-hover) .list-group-item:hover {
+  background-color: #e6ecf0;
+}
+
+.timeline-image {
+  border-radius: 50px;
+  height: 48px;
+  width: 48px;
+  margin: 2px 30px 10px 10px;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+a.btn.btn-danger,
+a.btn.btn-danger:hover {
+  color: white;
+}
+
+.navbar-header {
+  margin: 0 auto;
 }
