--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,7 +47,7 @@ ul.nav.navbar-nav li {
   align-items: center;
   justify-content: center;
   z-index: -1;
-  background-image: url("./images/signed-out-home.jpg");
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%,rgba(0,0,0,0.3) 100%), url("./images/signed-out-home.jpg");
   text-align: center;
   padding: 1rem;
   background-position: center center;
